LAU-760 delete user that has one and only citizen role